--- a/templates/bookmark-jobs.html
+++ b/templates/bookmark-jobs.html
@@ -17,8 +17,7 @@
                                         <div class="page-next">
                                             <nav class="d-inline-block" aria-label="breadcrumb text-center">
                                                 <ol class="breadcrumb justify-content-center">
-                                                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                                    <li class="breadcrumb-item"><a href="javascript:void(0)">Profile</a></li>
+                                                    <li class="breadcrumb-item"><a href="javascript:void(0)"> 내 프로필 </a></li>
                                                     <li class="breadcrumb-item active" aria-current="page"> 내 폴더 </li>
                                                 </ol>
                                             </nav>
@@ -49,7 +48,7 @@
                     <section class="section">
                         <div class="container">
                             <div class="row align-items-center">
-                                <div class="col-lg-6">
+                                <div class="col-lg-8">
                                     <div>
                                         <h6 class="fs-16 mb-0"> 저장된 폴더 </h6>
                                     </div>
@@ -83,7 +82,7 @@
                                 </div><!--end col-->
                             </div><!--end row-->
                             <div class="row">
-                                <div class="col-lg-10 ">
+                                <div class="col-lg-12 ">
                                     <div class="job-box card mt-4">
                                         <div class="card-body p-4">
                                             <div class="row align-items-center">
@@ -214,85 +213,7 @@
                                         </div>
                                     </div><!--end job-box-->
                                 </div><!--end col-->
-                                <div class="col-lg-2">
-                                  <div class="accordion-item mt-3">
-                                      <h2 class="accordion-header" id="jobType">
-                                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#jobtype" aria-expanded="false" aria-controls="jobtype">
-                                              분류
-                                          </button>
-                                      </h2>
-                                      <div id="jobtype" class="accordion-collapse collapse show" aria-labelledby="jobType">
-                                          <div class="accordion-body">
-                                              <div class="side-title">
-                                                  <div class="form-check mt-2">
-                                                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault6" checked>
-                                                      <label class="form-check-label ms-2 text-muted" for="flexRadioDefault6">
-                                                          전체
-                                                      </label>
-                                                  </div>
-                                                  <div class="form-check mt-2">
-                                                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                                                      <label class="form-check-label ms-2 text-muted" for="flexRadioDefault2">
-                                                          KINS
-                                                      </label>
-                                                  </div>
-                                                  <div class="form-check mt-2">
-                                                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-                                                      <label class="form-check-label ms-2 text-muted" for="flexRadioDefault3">
-                                                          NCS
-                                                      </label>
-                                                  </div>
-                                                  <div class="form-check mt-2">
-                                                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
-                                                      <label class="form-check-label ms-2 text-muted" for="flexRadioDefault4">
-                                                          UNIST
-                                                      </label>
-                                                  </div>
-                                                  <div class="form-check mt-2">
-                                                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
-                                                      <label class="form-check-label ms-2 text-muted" for="flexRadioDefault4">
-                                                          BRNC
-                                                      </label>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </div><!-- end accordion-item -->
-                                  <div class="accordion-item mt-4">
-                                  <h2 class="accordion-header" id="experienceOne">
-                                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#experience" aria-expanded="true" aria-controls="experience">
-                                          Company
-                                      </button>
-                                  </h2>
-                                  <div id="experience" class="accordion-collapse collapse show" aria-labelledby="experienceOne">
-                                      <div class="accordion-body">
-                                          <div class="side-title">
-                                              <div class="form-check mt-2">
-                                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked1" />
-                                                  <label class="form-check-label ms-2 text-muted" for="flexCheckChecked1">전체</label>
-                                              </div>
-                                              <div class="form-check mt-2">
-                                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked2" checked />
-                                                  <label class="form-check-label ms-2 text-muted" for="flexCheckChecked2">N/Star</label>
-                                              </div>
-                                              <div class="form-check mt-2">
-                                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked3" />
-                                                  <label class="form-check-label ms-2 text-muted" for="flexCheckChecked3">논문</label>
-                                              </div>
-                                              <div class="form-check mt-2">
-                                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked4" />
-                                                  <label class="form-check-label ms-2 text-muted" for="flexCheckChecked4">보고서</label>
-                                              </div>
-                                              <div class="form-check mt-2">
-                                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked4" />
-                                                  <label class="form-check-label ms-2 text-muted" for="flexCheckChecked4">일정</label>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </div>
-                                  </div><!-- end accordion-item -->
 
-                                </div>
                             </div><!--end row-->
 
                             <div class="row">
