--- a/templates/index/index-2.html
+++ b/templates/index/index-2.html
@@ -56,7 +56,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-6">
                                     <div class="section-title text-center">
-                                        <h3 class="title">Browser Job Categories </h3>
+                                        <h3 class="title">연구분야</h3>
                                         <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with the
                                             right freelancers.</p>
                                     </div>
@@ -65,7 +65,7 @@
                             </div>
                             <!--end row-->
                             <div class="row">
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                                <div class="col-lg-4 col-md-6 mt-4 pt-2">
                                     <div class="popu-category-box rounded text-center">
                                         <div class="popu-category-icon icons-md">
                                             <i class="uim uim-layers-alt"></i>
@@ -79,7 +79,7 @@
                                     </div><!--end popu-category-box-->
                                 </div>
                                 <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                                <div class="col-lg-4 col-md-6 mt-4 pt-2">
                                     <div class="popu-category-box rounded text-center">
                                         <div class="popu-category-icon icons-md">
                                             <i class="uim uim-airplay"></i>
@@ -93,7 +93,7 @@
                                     </div><!--end popu-category-box-->
                                 </div>
                                 <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                                <div class="col-lg-4 col-md-6 mt-4 pt-2">
                                     <div class="popu-category-box rounded text-center">
                                         <div class="popu-category-icon icons-md">
                                             <i class="uim uim-bag"></i>
@@ -107,35 +107,7 @@
                                     </div><!--end popu-category-box-->
                                 </div>
                                 <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                                    <div class="popu-category-box rounded text-center">
-                                        <div class="popu-category-icon icons-md">
-                                            <i class="uim uim-user-md"></i>
-                                        </div>
-                                        <div class="popu-category-content mt-4">
-                                            <a href="javascript:void(0)" class="text-dark stretched-link">
-                                                <h5 class="fs-18">Accounting / Finance</h5>
-                                            </a>
-                                            <p class="text-muted mb-0">577 Jobs</p>
-                                        </div>
-                                    </div><!--end popu-category-box-->
-                                </div>
-                                <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                                    <div class="popu-category-box rounded text-center">
-                                        <div class="popu-category-icon icons-md">
-                                            <i class="uim uim-hospital"></i>
-                                        </div>
-                                        <div class="popu-category-content mt-4">
-                                            <a href="javascript:void(0)" class="text-dark stretched-link">
-                                                <h5 class="fs-18">Construction / Facilities</h5>
-                                            </a>
-                                            <p class="text-muted mb-0">285 Jobs</p>
-                                        </div>
-                                    </div><!--end popu-category-box-->
-                                </div>
-                                <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                                <div class="col-lg-4 col-md-6 mt-4 pt-2">
                                     <div class="popu-category-box rounded text-center">
                                         <div class="popu-category-icon icons-md">
                                             <i class="uim uim-telegram-alt"></i>
@@ -149,7 +121,7 @@
                                     </div><!--end popu-category-box-->
                                 </div>
                                 <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                                <div class="col-lg-4 col-md-6 mt-4 pt-2">
                                     <div class="popu-category-box rounded text-center">
                                         <div class="popu-category-icon icons-md">
                                             <i class="uim uim-scenery"></i>
@@ -163,7 +135,7 @@
                                     </div><!--end popu-category-box-->
                                 </div>
                                 <!--end col-->
-                                <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                                <div class="col-lg-4 col-md-6 mt-4 pt-2">
                                     <div class="popu-category-box rounded text-center">
                                         <div class="popu-category-icon icons-md">
                                             <i class="uim uim-android-alt"></i>
@@ -179,13 +151,14 @@
                                 <!--end col-->
                             </div>
                             <!--end row-->
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-lg-12">
                                     <div class="mt-5 text-center">
                                         <a href="{% url 'job-categories' %}" class="btn btn-primary btn-hover">Browse All Categories <i class="uil uil-arrow-right"></i></a>
                                     </div>
-                                </div><!--end col-->
-                            </div><!--end row-->
+                                </div>
+                            </div> -->
+                            <!--end row-->
                         </div>
                         <!--end container-->
                     </section>
@@ -207,7 +180,7 @@
                                                         1
                                                     </div>
                                                     <div class="flex-grow-1 text-start ms-3">
-                                                        <h5 class="fs-18">Register an account</h5>
+                                                        <h5 class="fs-18">기관 계정 생성</h5>
                                                         <p class="text-muted mb-0">Due to its widespread use as filler text for layouts, non-readability
                                                             is of great importance.</p>
                                                     </div>
@@ -219,7 +192,7 @@
                                                         2
                                                     </div>
                                                     <div class="flex-grow-1 text-start ms-3">
-                                                        <h5 class="fs-18">Find your job</h5>
+                                                        <h5 class="fs-18">파일 업로드 및 관리</h5>
                                                         <p class="text-muted mb-0">There are many variations of passages of avaibookmark-label, but the majority
                                                             alteration in some form.</p>
                                                     </div>
@@ -231,7 +204,7 @@
                                                         3
                                                     </div>
                                                     <div class="flex-grow-1 text-start ms-3">
-                                                        <h5 class="fs-18">Apply for job</h5>
+                                                        <h5 class="fs-18">데이터베이스 구축</h5>
                                                         <p class="text-muted mb-0">It is a long established fact that a reader will be distracted by the
                                                             readable content of a page.</p>
                                                     </div>
