--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -2,7 +2,7 @@
 
 {% block topbar %}
             <!-- START TOP-BAR -->
-            <div class="top-bar">
+            <div class="top-bar" style="display:none;">
                 <div class="container-fluid custom-container">
                     <div class="row g-0 align-items-center">
                         <div class="col-md-7">
@@ -78,4 +78,3 @@
             </div>
             <!-- END TOP-BAR -->
 {% endblock topbar %}
-    
