--- a/templates/pages/candidates-company/candidate-details.html
+++ b/templates/pages/candidates-company/candidate-details.html
@@ -7,6 +7,12 @@
 
 <!-- Light Box Css -->
 <link rel="stylesheet" href="{% static 'libs/glightbox/dist/css/glightbox.min.css' %}">
+<style>
+  .candidate-education-content::before {
+    height: auto !important;
+    border: none !important;
+  }
+</style>
 {% endblock extra_css %}
 {% block content %}
 <!-- Start home -->
@@ -15,13 +21,13 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">Candidate Details</h3>
+          <h3 class="mb-4">상세내용</h3>
           <div class="page-next">
             <nav class="d-inline-block" aria-label="breadcrumb text-center">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item"><a href="{% url 'index'%}">자료 게시판</a></li>
                 <li class="breadcrumb-item"><a href="javascript:void(0)">전체 공유문서함</a></li>
-                <li class="breadcrumb-item active" aria-current="page"> 자료1 </li>
+                <li class="breadcrumb-item active" aria-current="page"> 상세내용 </li>
               </ol>
             </nav>
           </div>
@@ -55,16 +61,9 @@
 
 
           <div class="candidate-profile-overview  card-body border-top p-4">
-            <h6 class="fs-17 fw-semibold mb-3">Profile Overview</h6>
+            <h6 class="fs-17 fw-semibold mb-3">심층처분 보고서</h6>
             <ul class="list-unstyled mb-0">
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">과제명</label>
-                  <div>
-                    <p class="text-muted mb-0">중간 보고서</p>
-                  </div>
-                </div>
-              </li>
+
               <li>
                 <div class="d-flex">
                   <label class="text-dark">분류</label>
@@ -87,7 +86,7 @@
                 <div class="d-flex">
                   <label class="text-dark">작성자</label>
                   <div>
-                    <p class="text-muted mb-0">이정현</p>
+                    <p class="text-muted mb-0">홍길동</p>
                   </div>
                 </div>
               </li>
@@ -108,7 +107,7 @@
               </li>
               <li class="list-inline-item mb-0">
                 <div class="favorite-icon">
-                  <a href="javascript:void(0)"><i class="uil uil-heart-alt fs-18"></i></a>
+                  <a href="javascript:void(0)"><i class="uil uil-folder-plus fs-18"></i></a>
                 </div>
               </li>
             </ul>
@@ -116,7 +115,7 @@
 
 
           <div class="candidate-contact-details card-body p-4 border-top">
-            <h6 class="fs-17 fw-semibold mb-3">Contact Details</h6>
+            <h6 class="fs-17 fw-semibold mb-3">상세내용</h6>
             <ul class="list-unstyled mb-0">
               <li>
                 <div class="d-flex align-items-center mt-4">
@@ -200,71 +199,22 @@
             <div class="candidate-education-details mt-4 pt-3">
               <h6 class="fs-17 fw-bold mb-0">세부 내용</h6>
               <div class="candidate-education-content mt-4 d-flex">
-                <div class="circle flex-shrink-0 bg-soft-primary"> B </div>
+                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 06.27 </div>
                 <div class="ms-4">
-                  <h6 class="fs-16 mb-1">BCA - Bachelor of Computer Application</h6>
-                  <p class="mb-2 text-muted">International University - (2004 - 2010)</p>
-                  <p class="text-muted">There are many variations of passages of available, but the majority alteration in some form. As a highly skilled and successfull product development and design specialist with more than 4 Years of My
-                    experience.</p>
+                  <h6 class="fs-16 mb-1">필드 수정</h6>
+                  <p class="text-muted">데이터베이스 검색을 위한 제목 필드로 수정 완료하였습니다.</p>
                 </div>
               </div>
               <div class="candidate-education-content mt-4 d-flex">
-                <div class="circle flex-shrink-0 bg-soft-primary"> M </div>
+                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 07.06 </div>
                 <div class="ms-4">
-                  <h6 class="fs-16 mb-1">MCA - Master of Computer Application</h6>
-                  <p class="mb-2 text-muted">International University - (2010 - 2012)</p>
-                  <p class="text-muted">There are many variations of passages of available, but the majority alteration in some form. As a highly skilled and successfull product development and design specialist with more than 4 Years of My
-                    experience.</p>
-                </div>
-              </div>
-              <div class="candidate-education-content mt-4 d-flex">
-                <div class="circle flex-shrink-0 bg-soft-primary"> D </div>
-                <div class="ms-4">
-                  <h6 class="fs-16 mb-1">Design Communication Visual</h6>
-                  <p class="text-muted mb-2">International University - (2012-2015)</p>
-                  <p class="text-muted">There are many variations of passages of available, but the majority alteration in some form. As a highly skilled and successfull product development and design specialist with more than 4 Years of My
-                    experience.</p>
+                  <h6 class="fs-16 mb-1">태그 추가</h6>
+                  <p class="text-muted mb-2">NCS | 홍길동</p>
+                  <p class="text-muted">각 항목별 태그의 수를 5개 이상으로 추가하여 수정하였습니다.</p>
                 </div>
               </div>
             </div>
             <!--end candidate-education-details-->
-
-            <div class="candidate-portfolio mt-4 pt-3">
-              <h6 class="fs-17 fw-bold mb-0">Projects</h6>
-              <div class="row">
-                <div class="col-lg-4 mt-4">
-                  <div class="candidate-portfolio-box card border-0">
-                    <img src="{% static 'images/blog/img-01.jpg' %}" alt="" class="img-fluid">
-                    <div class="bg-overlay"></div>
-                    <div class="zoom-icon">
-                      <a href="{% static 'images/blog/img-01.jpg' %}" class="image-popup text-white" data-title="The Coding Awards" data-description="There are many variations of passages of available, but the majority alteration in some form."><i
-                          class="uil uil-search-alt"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 mt-4">
-                  <div class="candidate-portfolio-box card border-0">
-                    <img src="{% static 'images/blog/img-02.jpg' %}" alt="" class="img-fluid">
-                    <div class="bg-overlay"></div>
-                    <div class="zoom-icon">
-                      <a href="{% static 'images/blog/img-02.jpg' %}" class="image-popup text-white" data-title="Project Explained" data-description="There are many variations of passages of available, but the majority alteration in some form."><i
-                          class="uil uil-search-alt"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 mt-4">
-                  <div class="candidate-portfolio-box card border-0">
-                    <img src="{% static 'images/blog/img-03.jpg' %}" alt="" class="img-fluid">
-                    <div class="bg-overlay"></div>
-                    <div class="zoom-icon">
-                      <a href="{% static 'images/blog/img-03.jpg' %}" class="image-popup text-white" data-title="Social Geek Made" data-description="There are many variations of passages of available, but the majority alteration in some form."><i
-                          class="uil uil-search-alt"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!--end candidate-portfolio-->
 
           </div>
           <!--end card-body-->
