--- a/templates/pages/candidates-company/company-list.html
+++ b/templates/pages/candidates-company/company-list.html
@@ -19,13 +19,12 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">Company List</h3>
+          <h3 class="mb-4"> 기관별 공유문서함 </h3>
           <div class="page-next">
             <nav class="d-inline-block" aria-label="breadcrumb text-center">
               <ol class="breadcrumb justify-content-center">
-                <li class="breadcrumb-item"><a href="{% url 'index'%}">Home</a></li>
-                <li class="breadcrumb-item"><a href="javascript:void(0)">Pages</a></li>
-                <li class="breadcrumb-item active" aria-current="page"> Company List </li>
+                <li class="breadcrumb-item"><a href="javascript:void(0)">자료 게시판</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> 기관별 공유문서함 </li>
               </ol>
             </nav>
           </div>
@@ -73,12 +72,12 @@
             </div>
             <img src="{% static 'images/logo/kins-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'company-details' %}" class="primary-link">
+              <a href="{% url 'candidate-list' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">KINS</h6>
               </a>
               <p class="text-muted mb-4">한국원자력안전기술원</p>
 
-              <a href="{% url 'company-details' %}" class="btn btn-primary">52 개의 문서</a>
+              <a href="{% url 'candidate-list' %}" class="btn btn-primary">52 개의 문서</a>
             </div>
           </div>
         </div>
@@ -89,12 +88,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/kigam-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'company-details' %}" class="primary-link">
+              <a href="{% url 'candidate-list' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">KIGAM</h6>
               </a>
               <p class="text-muted mb-4">한국지질자원연구원</p>
 
-              <a href="{% url 'company-details' %}" class="btn btn-primary">11 개의 문서</a>
+              <a href="{% url 'candidate-list' %}" class="btn btn-primary">11 개의 문서</a>
             </div>
           </div>
         </div>
@@ -105,12 +104,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/ncs-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'company-details' %}" class="primary-link">
+              <a href="{% url 'candidate-list' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">NC Square</h6>
               </a>
               <p class="text-muted mb-4">(주)엔씨스퀘어</p>
 
-              <a href="{% url 'company-details' %}" class="btn btn-primary">09 개의 문서</a>
+              <a href="{% url 'candidate-list' %}" class="btn btn-primary">09 개의 문서</a>
             </div>
           </div>
         </div>
@@ -122,12 +121,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/brnc-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'company-details' %}" class="primary-link">
+              <a href="{% url 'candidate-list' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">BRNC</h6>
               </a>
               <p class="text-muted mb-4">(주)비알엔씨</p>
 
-              <a href="{% url 'company-details' %}" class="btn btn-primary">27 개의 문서</a>
+              <a href="{% url 'candidate-list' %}" class="btn btn-primary">27 개의 문서</a>
             </div>
           </div>
         </div>
@@ -138,12 +137,12 @@
           <div class="card-body px-4 py-5">
             <img src="{% static 'images/logo/unist-logo.png' %}" alt="" class="img-fluid rounded-3">
             <div class="mt-4">
-              <a href="{% url 'company-details' %}" class="primary-link">
+              <a href="{% url 'candidate-list' %}" class="primary-link">
                 <h6 class="fs-18 mb-2">UNIST</h6>
               </a>
               <p class="text-muted mb-4">울산과학기술원</p>
 
-              <a href="{% url 'company-details' %}" class="btn btn-primary">07 개의 문서</a>
+              <a href="{% url 'candidate-list' %}" class="btn btn-primary">07 개의 문서</a>
             </div>
           </div>
         </div>
