--- a/templates/pages/extra-pages/cal.html
+++ b/templates/pages/extra-pages/cal.html
@@ -31,43 +31,6 @@
     display: block;
   }
 
-
-  .modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    display: none;
-
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-
-  .modal.show {
-    display: block;
-  }
-
-  .modal_body {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    width: 400px;
-    height: 600px;
-
-    padding: 40px;
-
-    text-align: center;
-
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-
-    transform: translateX(-50%) translateY(-50%);
-  }
-
   .right {
     float: right;
     margin: 5px;
@@ -81,35 +44,7 @@
 {% endblock extra_css %}
 {% block content %}
 <!-- Start home -->
-<script>
-  window.onload = function() {
-    const body = document.querySelector('body');
-    const modal = document.querySelector('.modal');
-    const btnOpenPopup = document.querySelector('.btn-open-popup');
 
-    console.log(btnOpenPopup)
-
-    btnOpenPopup.addEventListener('click', () => {
-      modal.classList.toggle('show');
-
-      if (modal.classList.contains('show')) {
-        body.style.overflow = 'hidden';
-      }
-    });
-
-    modal.addEventListener('click', (event) => {
-
-      if (event.target === modal) {
-        modal.classList.toggle('show');
-
-        if (!modal.classList.contains('show')) {
-          body.style.overflow = 'auto';
-        }
-      }
-    });
-
-  }
-</script>
 <section class="page-title-box">
   <div class="container">
     <div class="row justify-content-center">
@@ -158,16 +93,50 @@
       <div class="col-lg-12"> {{ calendar }} </div>
       <div class="col-lg-10"></div>
       <div class="col-lg-2">
-        <a class="btn btn-soft-primary rounded-pill right add" data-toggle="modal" data-target="#add-schedule" href="#"> + Add Schedule </a>
+        <a class="btn btn-soft-primary rounded-pill right add" data-bs-toggle="modal" data-target="#add-schedule" href="#add-schedule"> + Add Schedule </a>
       </div>
-
-
     </div>
   </div>
 
 
+<!-- Add Schedule Modal -->
+  <div class="modal fade" id="add-schedule" tabindex="-1" aria-labelledby="add-schedule" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body p-5">
+          <div class="text-center mb-4">
+            <h5 class="modal-title" id="staticBackdropLabel">이벤트 생성</h5>
+          </div>
+          <div class="position-absolute end-0 top-0 p-3">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="mb-3">
+            <label for="nameControlInput" class="form-label">일시</label>
+            <input type="date" class="form-control" id="dateControlInput" value="{event.start_time}">
+          </div>
+          <div class="mb-3">
+            <label for="messageControlTextarea" class="form-label">세부일정</label>
+            <textarea class="form-control" id="messageControlTextarea" rows="4" placeholder="내용"></textarea>
+          </div>
+          <div class="mb-4">
+            <label class="form-label" for="inputGroupFile01">참고문서</label>
+            <input type="file" class="form-control" id="inputGroupFile01">
+          </div>
+          <div class="mb-3">
+            <label for="emailControlInput2" class="form-label">담당자</label>
+            <input type="text" class="form-control" id="emailControlInput2" readonly="readonly" placeholder="홍길동">
+          </div>
+          <button type="submit" class="btn btn-primary w-100 right">저장</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Modal -->
 
 </section>
+
+
+
 {% endblock content %}
 {% block javascript %}
 
