--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -10,13 +10,6 @@
                                     <h4 class="text-white mb-4">Jobcy</h4>
                                     <p class="text-white-50">It is a long established fact that a reader will be of a page reader
                                         will be of at its layout.</p>
-                                    <p class="text-white mt-3">Follow Us on:</p>
-                                    <ul class="footer-social-menu list-inline mb-0">
-                                        <li class="list-inline-item"><a href="#"><i class="uil uil-facebook-f"></i></a></li>
-                                        <li class="list-inline-item"><a href="#"><i class="uil uil-linkedin-alt"></i></a></li>
-                                        <li class="list-inline-item"><a href="#"><i class="uil uil-google"></i></a></li>
-                                        <li class="list-inline-item"><a href="#"><i class="uil uil-twitter"></i></a></li>
-                                    </ul>
                                 </div>
                             </div><!--end col-->
                             <div class="col-lg-2 col-6">
@@ -73,9 +66,8 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <p class="text-white-50 text-center mb-0">
-                                    <script>document.write(new Date().getFullYear())</script> &copy; Jobcy - Job Listing Page
-                                    Template by <a href="https://pichforest.com/" target="_blank"
-                                        class="text-reset text-decoration-underline">Themesdesign</a>
+                                    <script>document.write(new Date().getFullYear())</script> &copy; (주)엔씨스퀘어 - KINS File Cloud by <a href="http://ncsquare.co.kr/" target="_blank"
+                                        class="text-reset text-decoration-underline">NCS</a>
                                 </p>
                             </div><!--end col-->
                         </div><!--end row-->
@@ -83,4 +75,3 @@
                 </div>
                 <!-- END FOOTER -->
 {% endblock footer %}
-    
