--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -2,7 +2,7 @@
 
 {% block navbar %}
 <!--Navbar Start-->
-<nav class="navbar navbar-expand-lg fixed-top sticky" id="navbar">
+<nav class="navbar navbar-expand-lg fixed-top sticky" id="navbar" style="margin-top:0 !important">
   <div class="container-fluid custom-container">
     <a class="navbar-brand text-dark fw-bold me-auto" href="{% url 'index'%}">
       <img src="{% static 'images/logo-dark.png' %}" height="22" alt="" class="logo-dark" />
@@ -17,7 +17,7 @@
       <ul class="navbar-nav mx-auto navbar-center">
         <li class="nav-item dropdown dropdown-hover">
           <a class="nav-link" href="javascript:void(0)" id="homedrop" role="button" data-bs-toggle="dropdown">
-            Home <div class="arrow-down"></div>
+            대시보드 <div class="arrow-down"></div>
           </a>
           <ul class="dropdown-menu dropdown-menu-center" aria-labelledby="homedrop">
             <span class="dropdown-header">대시보드</span>
@@ -62,10 +62,10 @@
     <!--end navabar-collapse-->
     <ul class="header-menu list-inline d-flex align-items-center mb-0">
       <li class="list-inline-item dropdown me-4">
-        <a href="javascript:void(0)" class="header-item noti-icon position-relative" id="notification" data-bs-toggle="dropdown" aria-expanded="false">
+        <!-- <a href="javascript:void(0)" class="header-item noti-icon position-relative" id="notification" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="mdi mdi-bell fs-22"></i>
           <div class="count position-absolute">3</div>
-        </a>
+        </a> -->
         <div class="dropdown-menu dropdown-menu-sm dropdown-menu-end p-0" aria-labelledby="notification">
           <div class="notification-header border-bottom bg-light">
             <h6 class="mb-1"> Notification </h6>
@@ -151,7 +151,7 @@
       </li>
       <li class="list-inline-item dropdown">
         <a href="javascript:void(0)" class="header-item" id="userdropdown" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="{% static 'images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, 이정현님!</span>
+          <img src="{% static 'images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, 홍길동님!</span>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userdropdown">
           <span class="dropdown-header">내 프로필</span>
